--- a/SimpleAudioRecorder/Main.storyboard
+++ b/SimpleAudioRecorder/Main.storyboard
@@ -53,7 +53,7 @@
                                                     <action selector="togglePlayback:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ebE-59-7Hf"/>
                                                 </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZ9-zM-R9O">
+                                            <button opaque="NO" contentMode="scaleToFill" selected="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xZ9-zM-R9O">
                                                 <rect key="frame" x="191" y="0.0" width="191" height="46"/>
                                                 <state key="normal" image="mic.fill" catalog="system"/>
                                                 <state key="selected" image="stop.fill" catalog="system"/>
